:bug: Fix centering of circles around buttons on smaller screens

--- a/src/app/modules/jamsession/playback-controller/playback-controller.component.scss
+++ b/src/app/modules/jamsession/playback-controller/playback-controller.component.scss
@@ -81,10 +81,10 @@
 }
 
 .btn-circle {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   padding: 6px 0px;
-  border-radius: 50px;
+  border-radius: 40px;
   font-size: 1em;
   text-align: center;
   border: none;
@@ -163,7 +163,7 @@
   .btn-circle {
     width: 30px;
     height: 30px;
-    padding: 6px 0px;
+    padding: 0px 0px;
     border-radius: 30px;
     font-size: 0.6em;
     text-align: center;
